--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -5933,6 +5933,22 @@ repositories:
       url: https://github.com/OTL/rqt_ez_publisher.git
       version: jade-devel
     status: developed
+  rqt_graph:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_graph.git
+      version: master
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_graph-release.git
+      version: 0.4.8-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-visualization/rqt_graph.git
+      version: master
+    status: maintained
   rqt_launchtree:
     doc:
       type: git
