--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6403,6 +6403,22 @@ repositories:
       url: https://github.com/stonier/rqt_py_trees.git
       version: devel
     status: developed
+  rqt_reconfigure:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_reconfigure.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_reconfigure-release.git
+      version: 0.4.8-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-visualization/rqt_reconfigure.git
+      version: master
+    status: maintained
   rqt_robot_plugins:
     doc:
       type: git
