rqt_tf_tree: 0.5.7-0 in 'jade/distribution.yaml' [bloom]

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -6225,6 +6225,22 @@ repositories:
       url: https://github.com/ros-visualization/rqt_srv.git
       version: master
     status: maintained
+  rqt_tf_tree:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_tf_tree.git
+      version: master
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_tf_tree.git
+      version: 0.5.7-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-visualization/rqt_tf_tree.git
+      version: master
+    status: maintained
   rqt_top:
     doc:
       type: git
