--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -6551,6 +6551,12 @@ repositories:
       url: https://github.com/ros-industrial/motoman.git
       version: indigo-devel
     status: maintained
+  motoman_experimental:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/motoman_experimental.git
+      version: hydro-devel
+    status: developed
   move_base_to_manip:
     doc:
       type: git
