--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2189,6 +2189,22 @@ repositories:
       url: https://github.com/ros-gbp/stage-release.git
       version: release/kinetic/stage
     status: maintained
+  stage_ros:
+    doc:
+      type: git
+      url: https://github.com/ros-simulation/stage_ros.git
+      version: lunar-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/stage_ros-release.git
+      version: 1.8.0-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-simulation/stage_ros.git
+      version: lunar-devel
+    status: maintained
   std_capabilities:
     doc:
       type: git
