--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -825,6 +825,30 @@ repositories:
       url: https://github.com/ros/message_runtime.git
       version: groovy-devel
     status: maintained
+  metapackages:
+    doc:
+      type: git
+      url: https://github.com/ros/metapackages.git
+      version: kinetic-devel
+    release:
+      packages:
+      - desktop
+      - desktop_full
+      - perception
+      - robot
+      - ros_base
+      - ros_core
+      - simulators
+      - viz
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/metapackages-release.git
+      version: 1.3.0-0
+    source:
+      type: git
+      url: https://github.com/ros/metapackages.git
+      version: kinetic-devel
+    status: maintained
   moveit_msgs:
     doc:
       type: git
