--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11996,6 +11996,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_image_view-release.git
       version: 0.4.8-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_image_view.git
       version: master
@@ -12057,6 +12058,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_moveit.git
       version: 0.5.7-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_moveit.git
       version: master
