--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6261,6 +6261,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_image_view-release.git
       version: 0.4.8-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_image_view.git
       version: master
@@ -6322,6 +6323,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_moveit.git
       version: 0.5.7-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_moveit.git
       version: master
