--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1749,6 +1749,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_image_view-release.git
       version: 0.4.8-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_image_view.git
       version: master
@@ -1795,6 +1796,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_moveit.git
       version: 0.5.7-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_moveit.git
       version: master
