rfsm: 1.0.1-0 in 'kinetic/distribution.yaml' [bloom] (#14848)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5081,7 +5081,10 @@ repositories:
       url: https://github.com/orocos/rFSM.git
       version: master
     release:
+      tags:
+        release: release/kinetic/{package}/{version}
       url: https://github.com/orocos-gbp/rfsm-release.git
+      version: 1.0.1-0
     source:
       type: git
       url: https://github.com/orocos/rFSM.git
