--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -6554,7 +6554,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/motoman_experimental.git
-      version: hydro-devel
+      version: indigo-devel
     status: developed
   move_base_to_manip:
     doc:
