--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3223,6 +3223,22 @@ repositories:
       url: https://bitbucket.org/dataspeedinc/mobility_base_simulator
       version: default
     status: developed
+  motoman:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/motoman.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ros-industrial/motoman.git
+      version: kinetic-devel
+    status: maintained
+  motoman_experimental:
+    doc:
+      type: git
+      url: https://github.com/ros-industrial/motoman_experimental.git
+      version: kinetic-devel
+    status: developed
   move_base_to_manip:
     doc:
       type: git
