--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14325,6 +14325,21 @@ repositories:
       url: https://bitbucket.org/traclabs/trac_ik.git
       version: master
     status: developed
+  transform_graph:
+    doc:
+      type: git
+      url: https://github.com/jstnhuang/transform_graph.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/jstnhuang-release/transform_graph-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/jstnhuang/transform_graph.git
+      version: indigo-devel
+    status: developed
   tty0tty:
     release:
       tags:
