--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -83,6 +83,11 @@ repositories:
       type: git
       url: https://github.com/oceansystemslab/auv_msgs.git
       version: indigo-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/oceansystemslab/auv_msgs-release.git
+      version: 0.0.1-0
     source:
       type: git
       url: https://github.com/oceansystemslab/auv_msgs.git
