--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6790,7 +6790,10 @@ repositories:
       - eigen_typekit
       - kdl_typekit
       - rtt_geometry
+      tags:
+        release: release/kinetic/{package}/{version}
       url: https://github.com/orocos-gbp/rtt_geometry-release.git
+      version: 2.9.0-0
     source:
       type: git
       url: https://github.com/orocos/rtt_geometry.git
