gdown: 3.2.6-0 in 'kinetic/distribution.yaml' [bloom] (#14932)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1442,6 +1442,13 @@ repositories:
       url: https://github.com/ros-simulation/gazebo_ros_pkgs.git
       version: kinetic-devel
     status: maintained
+  gdown:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/wkentaro/gdown-release.git
+      version: 3.2.6-0
+    status: maintained
   gencpp:
     doc:
       type: git
