gdown: 3.2.6-0 in 'lunar/distribution.yaml' [bloom] (#14935)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -401,6 +401,13 @@ repositories:
       url: https://github.com/ros-simulation/gazebo_ros_pkgs.git
       version: lunar-devel
     status: developed
+  gdown:
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/wkentaro/gdown-release.git
+      version: 3.2.6-0
+    status: maintained
   gencpp:
     doc:
       type: git
